@@ -12,21 +12,28 @@ import java.time.ZoneId
 internal class IrcMessageTest {
 
     @Test
-    fun `Gets UTC time from ServerTime tag if present`() {
+    fun `gets UTC time from ServerTime tag if present`() {
         currentTimeZoneProvider = { ZoneId.of("Z") }
         val message = IrcMessage(hashMapOf(MessageTag.ServerTime to "1995-09-15T09:00:00.0000Z"), null, "", emptyList())
         assertEquals(LocalDateTime.parse("1995-09-15T09:00:00"), message.metadata.time)
     }
 
     @Test
-    fun `Converts time in ServerTime tag to local timezone`() {
+    fun `converts time in ServerTime tag to local timezone`() {
         currentTimeZoneProvider = { ZoneId.of("America/New_York") }
         val message = IrcMessage(hashMapOf(MessageTag.ServerTime to "1995-09-15T09:00:00.0000Z"), null, "", emptyList())
         assertEquals(LocalDateTime.parse("1995-09-15T05:00:00"), message.metadata.time)
     }
 
     @Test
-    fun `Uses current local time if no tag present`() {
+    fun `uses current time if ServerTime tag is malformed`() {
+        currentTimeProvider = { TestConstants.time }
+        val message = IrcMessage(hashMapOf(MessageTag.ServerTime to "1996-05-03T13:00:00.***Z"), null, "", emptyList())
+        assertEquals(LocalDateTime.parse("1995-09-15T09:00:00"), message.metadata.time)
+    }
+
+    @Test
+    fun `uses current local time if no tag present`() {
         currentTimeProvider = { TestConstants.time }
         val message = IrcMessage(emptyMap(), null, "", emptyList())
         assertEquals(LocalDateTime.parse("1995-09-15T09:00:00"), message.metadata.time)
@@ -65,7 +72,7 @@ internal class IrcMessageTest {
     }
 
     @Test
-    fun `Uses account-name tag when creating a source user`() {
+    fun `uses account-name tag when creating a source user`() {
         val message = IrcMessage(hashMapOf(MessageTag.AccountName to "acidBurn"), "acidBurn!libby@root.localhost".toByteArray(), "", emptyList())
         val user = message.sourceUser!!
 
